# goe_assess_web4

./: .env.example  .gitignore  RAG_OPTIMIZATION_SUMMARY.md  RAG_SERVICE_OPTIMIZATION.md  README.md  app.py  architecture.md  config.py  demo_grading_engine.py  error.txt  gemini_image.md  llm_prompt_analysis.md  main.py  paper.md  project.md  pyproject.toml  requirements.txt  test_real_pdf_chunks.py
docs/: error_handling_implementation.md  file_service_implementation.md  sequential_grading_engine_implementation.md  task_10_implementation_summary.md  task_11_implementation_summary.md
models/: __init__.py  enhanced_progress_model.py  result_model.py  rubric_model.py  status_message_model.py  student_model.py
references/: Faiss_referneces.md
sample_data/: snuro_test_4_map_geo_assess_web4.xlsx  student_answers_example.xlsx
services/: export_service.py  file_service.py  grading_engine.py  llm_service.py  rag_service.py  status_message_manager.py
tests/: test_faiss_rag_implementation.py  test_file_service.py  test_file_service_integration.py  test_grading_engine.py  test_grading_engine_integration.py  test_grading_engine_rag_integration.py  test_grading_execution_ui.py  test_llm_service.py  test_models.py  test_prompt_utils.py  test_rag_integration.py  test_rag_optimization.py  test_rag_service.py  test_real_file_integration.py  test_results_ui.py  test_rubric_ui.py
ui/: __init__.py  enhanced_progress_display.py  error_display_ui.py  grading_execution_ui.py  main_ui.py  performance_dashboard_ui.py  results_ui.py  rubric_ui.py  status_display_ui.py
(+34 files in other folders)
